--- a/Labo5/labo5_ressources/player-student/Makefile
+++ b/Labo5/labo5_ressources/player-student/Makefile
@@ -1,19 +1,18 @@
 DESTDIR=libxenomai
 XENOCONFIG=$(DESTDIR)/usr/xenomai/bin/xeno-config
 CC=	$(shell DESTDIR=$(DESTDIR) $(XENOCONFIG) --cc)
-CFLAGS= $(shell DESTDIR=$(DESTDIR) $(XENOCONFIG) --posix --alchemy --cflags)
-LDFLAGS=$(shell DESTDIR=$(DESTDIR) $(XENOCONFIG) --posix --alchemy --ldflags)
+CFLAGS= -std=c99 $(shell DESTDIR=$(DESTDIR) $(XENOCONFIG) --posix --alchemy --cflags)
+LDFLAGS=$(shell DESTDIR=$(DESTDIR) $(XENOCONFIG) --posix --alchemy --ldflags --auto-init-solib)
 
 all: snd_player
 
-snd_player: snd_player.o io_utils.o
+snd_player: snd_player.o io_utils.o audio_player_board.o audio_utils.o
 	$(CC) -o $@ $^ $(LDFLAGS) $(LDLIBS)
 
 %.o : %.c
-	$(CC) -o $@ -c $< $(CFLAGS) -Wall -std=c99
+	$(CC) -o $@ -c $< $(CFLAGS) -Wall
 
 clean:
 	rm -f *.o snd_player
 
 .PHONY: clean
-
